--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,75 +1,117 @@
-@import url('https://fonts.googleapis.com/css?family=Assistant|Raleway&display=swap');
-* {
-  //border: solid 1px green;
-}
+@import url('https://fonts.googleapis.com/css?family=Roboto|Raleway&display=swap');
+//* {border: 1px solid green;}
 /*Variables*/
 $width: 50vw;
 $small-width: $width * .3;
-$time-font: 'Assistant', san-serif;
-$time-size-length: 1em;
+$length-width: $small-width * .8;
+$length-btn-width: $small-width * .14;
+$margin: $width * .02;
+$time-font-family: 'Roboto', san-serif;
 
 body {
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  box-sizing: border-box;
+  margin: 0 auto;
   width: $width;
   font-family: "Raleway", sans-serif;
-  font-size: 1.5em;
+  font-size: 1.6vw;
   text-align: center;
 }
 
 .app-container {
+  height: $width / 2;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-
+  align-content: flex-start;
+  border-radius: 10%;
+  border: 1px solid green;
 }
 
 .title {
   width: $width;
+  margin: 0 0 $margin 0;
   font-size: 2em;
   font-weight: bold;
-  color: crimson;
+  color: #CB4335;
 }
 
-
-
 .time-length-container, .timer-container {
-  width: $small-width;
   margin: $width * .01;
 }
 
 .time-length-container {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   justify-content: center;
-  .length-label {
-    width: $small-width;
-  }
-  .length-btn {
+  width: $length-width;
 
+  .length-label {
+    margin: 0;
+    width: $length-width;
+    height: fit-content;
+    font-weight: bolder;
   }
-  .time-length {
-    font-family: $time-font;
+  .time-length-group {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: fit-content;
+
+    .length-btn {
+      margin: 0;
+      width: $length-btn-width;
+      height: $length-btn-width;
+      font-size: .9em;
+      border-radius: 50%;
+      outline: none;
+    }
+    .time-length {
+      width: $small-width * .3;
+      //border: 1px solid green;
+      margin: 0;
+      font-family: $time-font-family;
+      font-size: 2em;
+    }
   }
 }
 
 .timer-container {
-  width: $small-width;
-  height: $small-width;
+  display: flex;
+  flex-direction: column;
+  width: $small-width * 1.2;
+  height: $small-width * 1.2;
   border-radius: 50%;
-  .timer-label {
+  background: rgb(203,67,53);
+  background: linear-gradient(to top, rgb(203,67,53) 0%, rgb(231,76,60) 50%, rgb(236,112,99) 100%);
 
-  }
-  #timer-left {
-    font-family: $time-font;
-    span {
-
+  .label-container {
+    #timer-label {
+      margin: $margin * 2 0 $margin * .8 0;
+      font-size: 1.5em;
+      font-weight: bold;
     }
+      #timer-left {
+        font-family: $time-font-family;
+        font-size: 3.2em;
+      }
   }
-  .timer-btn {
 
+  .btn-container {
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+
+    .timer-btn {
+      margin: $margin .5vw;
+      font-size: 1.6em;
+      background-color: transparent;
+      border: none;
+      outline: none;
+      cursor: pointer;
+    }
   }
 }
