--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -26,8 +26,8 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   align-content: flex-start;
-  border-radius: 10%;
-  border: 1px solid green;
+  border-radius: 36px;
+  box-shadow: 5px 5px 15px 5px #5B5B5B;
 }
 
 .title {
@@ -36,6 +36,7 @@ body {
   font-size: 2em;
   font-weight: bold;
   color: #CB4335;
+  text-shadow: #5B5B5B 1px 1px 5px;
 }
 
 .time-length-container, .timer-container {
@@ -43,10 +44,13 @@ body {
 }
 
 .time-length-container {
+  width: $length-width;
+  height: $length-width * .5;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: $length-width;
+  border-radius: 5%;
+  box-shadow: 5px 5px 15px 5px #5B5B5B;
 
   .length-label {
     margin: 0;
@@ -86,6 +90,7 @@ body {
   border-radius: 50%;
   background: rgb(203,67,53);
   background: linear-gradient(to top, rgb(203,67,53) 0%, rgb(231,76,60) 50%, rgb(236,112,99) 100%);
+  box-shadow: 5px 5px 15px 5px #5B5B5B;
 
   .label-container {
     #timer-label {
@@ -108,6 +113,7 @@ body {
     .timer-btn {
       margin: $margin .5vw;
       font-size: 1.6em;
+      text-shadow: #5B5B5B 1px 1px 5px;
       background-color: transparent;
       border: none;
       outline: none;
