--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -14,25 +14,34 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   margin: 0 auto;
-  width: $width;
+  width: 50vw;
   font-family: "Raleway", sans-serif;
   font-size: 1.6vw;
   text-align: center;
+
+  @media screen and (max-width: 600px){
+    width: 80vw;
+    font-size: 2.6vw;
+  }
 }
 
 .app-container {
-  height: $width / 2;
+  height: fit-content;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-content: flex-start;
   border-radius: 36px;
   box-shadow: 2px 2px 15px 2px rgba(0,0,0,0.66);
+
+  @media screen and (max-width: 600px){
+    flex-direction: column;
+  }
 }
 
 .title {
-  width: $width;
-  margin: 0 0 $margin 0;
+  width: 100%;
+  margin: 0 0 1% 0;
   font-size: 2em;
   font-weight: bold;
   color: #CB4335;
@@ -40,21 +49,25 @@ body {
 }
 
 .time-length-container, .timer-container {
-  margin: $width * .01;
+  margin: 1%;
 }
 
 .time-length-container {
-  width: $length-width;
-  height: $length-width * .5;
+  width: 12vw;
+  height: 6vw;
   display: flex;
   flex-direction: column;
   justify-content: center;
   border-radius: 12px;
   box-shadow: 2px 2px 15px 2px rgba(0,0,0,0.66);
 
+  @media screen and (max-width: 600px){
+    width: 50%;
+    height: 10vw;
+  }
+
   .length-label {
     margin: 0;
-    width: $length-width;
     height: fit-content;
     font-weight: bolder;
   }
@@ -66,8 +79,8 @@ body {
 
     .length-btn {
       margin: 0;
-      width: $length-btn-width;
-      height: $length-btn-width;
+      width: 2.1vw;
+      height: 2.1vw;
       font-size: .9em;
       border-radius: 50%;
       border: none;
@@ -77,7 +90,7 @@ body {
       box-shadow: 1px 1px 5px 1px rgba(0,0,0,0.66);
     }
     .time-length {
-      width: $small-width * .3;
+      width: 4.5vw;
       margin: 0;
       font-family: $time-font-family;
       font-size: 2em;
@@ -88,8 +101,8 @@ body {
 .timer-container {
   display: flex;
   flex-direction: column;
-  width: $small-width * 1.2;
-  height: $small-width * 1.2;
+  width: 18vw;
+  height: 18vw;
   border-radius: 50%;
   background: rgb(203,67,53);
   background: linear-gradient(to top, rgb(203,67,53) 0%, rgb(231,76,60) 50%, rgb(236,112,99) 100%);
@@ -97,7 +110,7 @@ body {
 
   .label-container {
     #timer-label {
-      margin: $margin * 2 0 $margin * .8 0;
+      margin: 2vw 0 .8vw 0;
       font-size: 1.5em;
       font-weight: bold;
     }
@@ -114,7 +127,7 @@ body {
     align-items: flex-end;
 
     .timer-btn {
-      margin: $margin .5vw;
+      margin: 1vw .5vw;
       font-size: 1.6em;
       text-shadow: #5B5B5B 1px 1px 5px;
       background-color: transparent;
