--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,12 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto|Raleway&display=swap');
-//* {border: 1px solid green;}
-/*Variables*/
-$width: 50vw;
-$small-width: $width * .3;
-$length-width: $small-width * .8;
-$length-btn-width: $small-width * .14;
-$margin: $width * .02;
-$time-font-family: 'Roboto', san-serif;
+* {
+  box-sizing: border-box;
+}
 
 body {
   position: fixed;
@@ -19,9 +14,9 @@ body {
   font-size: 1.6vw;
   text-align: center;
 
-  @media screen and (max-width: 600px){
-    width: 80vw;
-    font-size: 2.6vw;
+  @media screen and (max-width: 768px) and (min-height: 500px){
+    width: 70vw;
+    font-size: 3vw;
   }
 }
 
@@ -30,46 +25,55 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-content: flex-start;
   border-radius: 36px;
   box-shadow: 2px 2px 15px 2px rgba(0,0,0,0.66);
 
-  @media screen and (max-width: 600px){
+  @media screen and (max-width: 768px) and (min-height: 500px){
     flex-direction: column;
+    align-items: center;
+    padding-top: 2%;
   }
 }
 
 .title {
   width: 100%;
-  margin: 0 0 1% 0;
+  margin: 1% 0;
   font-size: 2em;
   font-weight: bold;
   color: #CB4335;
   text-shadow: #5B5B5B 1px 1px 5px;
-}
 
-.time-length-container, .timer-container {
-  margin: 1%;
+  @media screen and (max-width: 768px) and (min-height: 500px){
+    margin-bottom: 0;
+  }
 }
 
 .time-length-container {
-  width: 12vw;
-  height: 6vw;
+  width: 25%;
+  height: fit-content;
+  margin: 1%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   border-radius: 12px;
   box-shadow: 2px 2px 15px 2px rgba(0,0,0,0.66);
 
-  @media screen and (max-width: 600px){
+  @media screen and (max-width: 768px) and (min-height: 500px){
     width: 50%;
-    height: 10vw;
+    margin: 5% 0;
+    padding: 0 2%;
+    height: 15vw;
+    align-items: center;
   }
 
   .length-label {
     margin: 0;
     height: fit-content;
     font-weight: bolder;
+
+    @media screen and (max-width: 768px) and (min-height: 500px){
+      font-size: 1.3em;
+    }
   }
   .time-length-group {
     display: flex;
@@ -88,12 +92,23 @@ body {
       background: rgb(255,252,252);
       background: linear-gradient(to bottom, rgb(255,252,252) 0%, rgb(222,222,222) 42%, rgb(194,194,194) 100%);
       box-shadow: 1px 1px 5px 1px rgba(0,0,0,0.66);
+
+      @media screen and (max-width: 768px) and (min-height: 500px){
+        width: 5vw;
+        height: 5vw;
+        font-size: 1.3em;
+      }
     }
     .time-length {
       width: 4.5vw;
       margin: 0;
-      font-family: $time-font-family;
+      font-family: 'Roboto', sans-serif;
       font-size: 2em;
+
+      @media screen and (max-width: 768px) and (min-height: 500px){
+        width: 15vw;
+        font-size: 2.5em;
+      }
     }
   }
 }
@@ -103,20 +118,36 @@ body {
   flex-direction: column;
   width: 18vw;
   height: 18vw;
+  margin: 1% 1% 3% 1%;
   border-radius: 50%;
   background: rgb(203,67,53);
   background: linear-gradient(to top, rgb(203,67,53) 0%, rgb(231,76,60) 50%, rgb(236,112,99) 100%);
   box-shadow: 2px 2px 15px 2px rgba(0,0,0,0.66);
+
+  @media screen and (max-width: 768px) and (min-height: 500px){
+    width: 40vw;
+    height: 40vw;
+    margin: 0;
+  }
 
   .label-container {
     #timer-label {
       margin: 2vw 0 .8vw 0;
       font-size: 1.5em;
       font-weight: bold;
+
+      @media screen and (max-width: 768px) and (min-height: 500px){
+        margin-top: 4vw;
+        font-size: 2em;
+      }
     }
       #timer-left {
-        font-family: $time-font-family;
+        font-family: 'Roboto', sans-serif;
         font-size: 3.2em;
+
+        @media screen and (max-width: 768px) and (min-height: 500px){
+          font-size: 4em;
+        }
       }
   }
 
@@ -134,6 +165,10 @@ body {
       border: none;
       outline: none;
       cursor: pointer;
+
+      @media screen and (max-width: 768px) and (min-height: 500px){
+        font-size: 2.2em;
+      }
     }
   }
 }
